--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,123 @@
   </nav>
 
   <main role="main" class="container mt-5">
-    <div class="row">
+    <div class="row text-center mb-5">
       <div class="col-sm">
+        <h1>Schedule Builder</h1>
         <p>Lorem ipsum</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353ACC03" id="4353ACC03">
+          <label class="form-check-label" for="4353ACC03">Accounting</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353APRM4" id="4353APRM4">
+          <label class="form-check-label" for="4353APRM4">Applied Research Methodology</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353BUSI4" id="4353BUSI4">
+          <label class="form-check-label" for="4353BUSI4">Business Intelligence</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353SYBSC" id="4353SYBSC">
+          <label class="form-check-label" for="4353SYBSC">Cyber Security</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4603BSFM3" id="4603BSFM3">
+          <label class="form-check-label" for="4603BSFM3">Financial Management</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353ICTA6" id="4353ICTA6">
+          <label class="form-check-label" for="4353ICTA6">ICT Architectures</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353LSS03" id="4353LSS03">
+          <label class="form-check-label" for="4353LSS03">Lean Six Sigma</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353MANIN" id="4353MANIN">
+          <label class="form-check-label" for="4353MANIN">Managing Innnovation</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353MTDB3" id="4353MTDB3">
+          <label class="form-check-label" for="4353MTDB3">Managing the Digital Business</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4603BSMA3" id="4603BSMA3">
+          <label class="form-check-label" for="4603BSMA3">Marketing</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353MAAN3" id="4353MAAN3">
+          <label class="form-check-label" for="4353MAAN3">Marketing Analytics</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353PROMO" id="4353PROMO">
+          <label class="form-check-label" for="4353PROMO">Process Modelling</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4603BSRM5" id="4603BSRM5">
+          <label class="form-check-label" for="4603BSRM5">Research Methods</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353RITPA" id="4353RITPA">
+          <label class="form-check-label" for="4353RITPA">Role of ICT in Public Administration</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353WGICT" id="4353WGICT">
+          <label class="form-check-label" for="4353WGICT">Working for the Government as ICT Expert</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <button type="submit" class="btn btn-primary" id="build-btn">Build My Schedule</button>
       </div>
     </div>
   </main>
