--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,12 @@
     <div class="row text-center mb-5">
       <div class="col-sm">
         <h1>Schedule Builder</h1>
-        <p>Lorem ipsum</p>
+        <p>Create your customized schedule based on the courses you have chosen.</p>
+        <p>
+          Courses and dates are picked from the <code>.xlsx</code> file on the
+          <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
+        </p>
+        <p class="font-weight-bold">Last updated: 04/01/2020 22:00.</p>
       </div>
     </div>
 
@@ -130,7 +135,7 @@
 
     <div class="row">
       <div class="col">
-        <button type="submit" class="btn btn-primary" id="build-btn">Build My Schedule</button>
+        <button type="submit" class="btn btn-primary mt-3" id="build-btn">Build My Schedule</button>
       </div>
     </div>
   </main>
