:lipstick: Updated UI

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,12 +8,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
-<body>
+<body class="h-100">
   <nav class="navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Schedule Builder</a>
   </nav>
 
-  <main role="main" class="container mt-5">
+  <main role="main" class="container my-5">
     <div class="row text-center mb-5">
       <div class="col-sm">
         <h1>Schedule Builder</h1>
