--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,13 @@
     </div>
 
     <div class="row">
+      <div class="col">
+        <h2>ICT in Business and Public Sector courses</h2>
+        <p>Courses extracted from the <code>.xlsx</code> on <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.</p>
+      </div>
+    </div>
+
+    <div class="row mt-2 mb-3">
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
           <input class="form-check-input" type="checkbox" name="courses" value="4353ACC03" id="4353ACC03">
@@ -130,6 +137,13 @@
           <input class="form-check-input" type="checkbox" name="courses" value="4353WGICT" id="4353WGICT">
           <label class="form-check-label" for="4353WGICT">Working for the Government as ICT Expert</label>
         </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <h2>Computer Science courses</h2>
+        <p>!! TODO !!</p>
       </div>
     </div>
 
