:bookmark: Bump last updated

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           Courses and dates are picked from the <code>.xlsx</code> file on the
           <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
         </p>
-        <p class="font-weight-bold">Last updated: 04/01/2020 22:00.</p>
+        <p class="font-weight-bold">Last updated: 05/01/2020.</p>
       </div>
     </div>
 
