:sparkles: Added (un)select all function

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,11 @@
       <div class="col">
         <h2>ICT in Business and Public Sector courses</h2>
         <p>Courses extracted from the <code>.xlsx</code> on <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.</p>
+
+        <div class="btn-group" role="group" aria-label="Select all">
+          <button type="button" class="btn btn-primary js-select-all">Select all</button>
+          <button type="button" class="btn btn-primary js-unselect-all">Unselect all</button>
+        </div>
       </div>
     </div>
 
