:lipstick: Updated UI and bump last updated

--- a/src/index.html
+++ b/src/index.html
@@ -22,16 +22,13 @@
           Courses and dates are picked from the <code>.xlsx</code> file on the
           <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
         </p>
-        <p class="font-weight-bold">Last updated: 05/01/2020.</p>
+        <p class="font-weight-bold">Last updated: 12/01/2020.</p>
       </div>
     </div>
 
     <div class="row">
       <div class="col">
-        <h2>ICT in Business and Public Sector courses</h2>
-        <p>Courses extracted from the <code>.xlsx</code> on <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.</p>
-
-        <div class="btn-group" role="group" aria-label="Select all">
+        <div class="btn-group mb-3" role="group" aria-label="Select all">
           <button type="button" class="btn btn-primary js-select-all">Select all</button>
           <button type="button" class="btn btn-primary js-unselect-all">Unselect all</button>
         </div>
@@ -147,14 +144,7 @@
 
     <div class="row">
       <div class="col">
-        <h2>Computer Science courses</h2>
-        <p>!! TODO !!</p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
-        <button type="submit" class="btn btn-primary mt-3" id="build-btn">Build My Schedule</button>
+        <button type="submit" class="btn btn-primary" id="build-btn">Build My Schedule</button>
       </div>
     </div>
   </main>
