:lipstick: Added warning

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           Courses and dates are picked from the <code>.xlsx</code> file on the
           <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
         </p>
-        <p class="font-weight-bold">Last updated: 12/01/2020.</p>
+        <p class="font-weight-bold">Currently NOT up-to-date: do not use! Last updated: 12/01/2020.</p>
       </div>
     </div>
 
@@ -144,7 +144,7 @@
 
     <div class="row">
       <div class="col">
-        <button type="submit" class="btn btn-primary" id="build-btn">Build My Schedule</button>
+        <button type="submit" class="btn btn-primary" id="build-btn" disabled>Build My Schedule</button>
       </div>
     </div>
   </main>
