:scroll: Added course to HTML

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,13 @@
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
+          <input class="form-check-input" type="checkbox" name="courses" value="4353CAPCV" id="4353CAPCV">
+          <label class="form-check-label" for="4353CAPCV">Capstone Cases</label>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="form-check pb-2">
           <input class="form-check-input" type="checkbox" name="courses" value="4353SYBSC" id="4353SYBSC">
           <label class="form-check-label" for="4353SYBSC">Cyber Security</label>
         </div>
