:sparkles: Added obligatory courses hint

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
           Courses and dates are picked from the <code>.xlsx</code> file on the
           <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
         </p>
+        <p>Courses in <strong>bold</strong> are obligatory for both specialisations.</p>
         <p class="font-weight-bold">Currently NOT up-to-date: do not use! Last updated: 12/01/2020.</p>
       </div>
     </div>
@@ -38,8 +39,8 @@
     <div class="row mt-2 mb-3">
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353ACC03" id="4353ACC03">
-          <label class="form-check-label" for="4353ACC03">Accounting</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353ACC03" id="4353ACC03" checked>
+          <label class="form-check-label font-weight-bold" for="4353ACC03">Accounting</label>
         </div>
       </div>
 
@@ -80,8 +81,8 @@
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353ICTA6" id="4353ICTA6">
-          <label class="form-check-label" for="4353ICTA6">ICT Architectures</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353ICTA6" id="4353ICTA6" checked>
+          <label class="form-check-label font-weight-bold" for="4353ICTA6">ICT Architectures</label>
         </div>
       </div>
 
@@ -122,15 +123,15 @@
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353PROMO" id="4353PROMO">
-          <label class="form-check-label" for="4353PROMO">Process Modelling</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353PROMO" id="4353PROMO" checked>
+          <label class="form-check-label font-weight-bold" for="4353PROMO">Process Modelling</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4603BSRM5" id="4603BSRM5">
-          <label class="form-check-label" for="4603BSRM5">Research Methods</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4603BSRM5" id="4603BSRM5" checked>
+          <label class="form-check-label font-weight-bold" for="4603BSRM5">Research Methods</label>
         </div>
       </div>
 
