:sparkles: Added notes section

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,16 @@
 
     <div class="row">
       <div class="col">
+        <h2>Notes</h2>
+        <ul>
+          <li>Rooms for Capstone Case not in <code>.xlsx</code> yet</li>
+          <li>Rooms for Marketing not in <code>.xlsx</code> yet</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
         <div class="btn-group mb-3" role="group" aria-label="Select all">
           <button type="button" class="btn btn-primary js-select-all">Select all</button>
           <button type="button" class="btn btn-primary js-unselect-all">Unselect all</button>
