:rocket: Enabled build button

--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
 
     <div class="row">
       <div class="col">
-        <button type="submit" class="btn btn-primary" id="build-btn" disabled>Build My Schedule</button>
+        <button type="submit" class="btn btn-primary" id="build-btn">Build My Schedule</button>
       </div>
     </div>
   </main>
