:card_file_box: Updated data file

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
         </p>
         <p>Courses in <strong>bold</strong> are obligatory for both specialisations.</p>
-        <p class="font-weight-bold">Last updated: 13/01/2020.</p>
+        <p class="font-weight-bold">Last updated: 17/01/2020.</p>
       </div>
     </div>
 
@@ -32,7 +32,7 @@
         <h2>Notes</h2>
         <ul>
           <li>Rooms for Capstone Case not in <code>.xlsx</code> yet</li>
-          <li>Rooms for Marketing not in <code>.xlsx</code> yet</li>
+          <li>Rooms for Marketing <del>not in <code>.xlsx</code> yet</del> Huygens 106-109</li>
         </ul>
       </div>
     </div>
