--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
         </p>
         <p>Courses in <strong>bold</strong> are obligatory for both specialisations.</p>
-        <p class="font-weight-bold">Last updated: 31/01/2020.</p>
+        <p class="font-weight-bold">Last updated: 02/02/2020.</p>
       </div>
     </div>
 
@@ -33,6 +33,7 @@
         <ul>
           <li>Rooms for Capstone Case not in <code>.xlsx</code> yet</li>
           <li>Rooms for Marketing <del>not in <code>.xlsx</code> yet</del> Huygens 106-109</li>
+          <li>Times for Role of IT in Public Administration are 19:15 in <code>.xlsx</code> but 19.00 on BlackBoard and PDF</li>
         </ul>
       </div>
     </div>
