:bookmark: Updated for next semester

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
         <h1>Schedule Builder</h1>
         <p>Create your customized schedule based on the courses you have chosen.</p>
         <p>
-          Courses and dates are picked from the <code>.xlsx</code> file on the
+          Courses and dates are picked from uSis and the <code>.pdf</code> timetable on the
           <a href="https://www.student.universiteitleiden.nl/en/study--studying/study/educational-information/schedules/science/ict-in-business-and-the-public-sector-msc?cf=science&cd=ict-in-business-and-the-public-sector-msc#tab-2" target="_blank">official university website</a>.
         </p>
         <p>Courses in <strong>bold</strong> are obligatory for both specialisations.</p>
-        <p class="font-weight-bold">Last updated: 02/02/2020.</p>
+        <p class="font-weight-bold">Last updated: 27/08/2020.</p>
       </div>
     </div>
 
@@ -31,9 +31,7 @@
       <div class="col">
         <h2>Notes</h2>
         <ul>
-          <li>Rooms for Capstone Case not in <code>.xlsx</code> yet</li>
-          <li>Rooms for Marketing <del>not in <code>.xlsx</code> yet</del> Huygens 106-109</li>
-          <li>Times for Role of IT in Public Administration are 19:15 in <code>.xlsx</code> but 19.00 on BlackBoard and PDF</li>
+          <li>Rooms for workgroup Managing Software Evolution not known yet</li>
         </ul>
       </div>
     </div>
@@ -50,113 +48,92 @@
     <div class="row mt-2 mb-3">
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353ACC03" id="4353ACC03" checked>
-          <label class="form-check-label font-weight-bold" for="4353ACC03">Accounting</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353APRM4" id="4353APRM4" checked>
+          <label class="form-check-label font-weight-bold" for="4353APRM4">Applied Research Methodology</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353APRM4" id="4353APRM4">
-          <label class="form-check-label" for="4353APRM4">Applied Research Methodology</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353BUSI3" id="4353BUSI3">
+          <label class="form-check-label" for="4353BUSI3">Business Intelligence</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353BUSI4" id="4353BUSI4">
-          <label class="form-check-label" for="4353BUSI4">Business Intelligence</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353CSC4V" id="4353CSC4V">
+          <label class="form-check-label" for="4353CSC4V">Capstone Cases</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353CAPCV" id="4353CAPCV">
-          <label class="form-check-label" for="4353CAPCV">Capstone Cases</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4343DASPR" id="4343DASPR">
+          <label class="form-check-label" for="4343DASPR">Data Science in Practice</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353SYBSC" id="4353SYBSC">
-          <label class="form-check-label" for="4353SYBSC">Cyber Security</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353DDPM" id="4353DDPM">
+          <label class="form-check-label" for="4353DDPM">Data-Driven Policy Making</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4603BSFM3" id="4603BSFM3">
-          <label class="form-check-label" for="4603BSFM3">Financial Management</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353DGCI" id="4353DGCI">
+          <label class="form-check-label" for="4353DGCI">Digital Government Citizen Interaction</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353ICTA6" id="4353ICTA6" checked>
-          <label class="form-check-label font-weight-bold" for="4353ICTA6">ICT Architectures</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4603BSDT5" id="4603BSDT5">
+          <label class="form-check-label" for="4603BSDT5">Digital Transformations</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353LSS03" id="4353LSS03">
-          <label class="form-check-label" for="4353LSS03">Lean Six Sigma</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4603BSEN3" id="4603BSEN3">
+          <label class="form-check-label" for="4603BSEN3">Entrepreneurship</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353MANIN" id="4353MANIN">
-          <label class="form-check-label" for="4353MANIN">Managing Innnovation</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4343FSWT6" id="4343FSWT6">
+          <label class="form-check-label" for="4343FSWT6">Foundations of Software Testing</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353MTDB3" id="4353MTDB3">
-          <label class="form-check-label" for="4353MTDB3">Managing the Digital Business</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4343INTML" id="4343INTML">
+          <label class="form-check-label" for="4343INTML">Introduction to Machine Learning</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4603BSMA3" id="4603BSMA3">
-          <label class="form-check-label" for="4603BSMA3">Marketing</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4353MNSE3" id="4353MNSE3">
+          <label class="form-check-label" for="4353MNSE3">Managing Software Evolution</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353MAAN3" id="4353MAAN3">
-          <label class="form-check-label" for="4353MAAN3">Marketing Analytics</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4343MACLAH" id="4343MACLAH" checked>
+          <label class="form-check-label font-weight-bold" for="4343MACLAH">Master Class</label>
         </div>
       </div>
 
       <div class="col-sm-6 col-lg-4">
         <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353PROMO" id="4353PROMO" checked>
-          <label class="form-check-label font-weight-bold" for="4353PROMO">Process Modelling</label>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-4">
-        <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4603BSRM5" id="4603BSRM5" checked>
-          <label class="form-check-label font-weight-bold" for="4603BSRM5">Research Methods</label>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-4">
-        <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353RITPA" id="4353RITPA">
-          <label class="form-check-label" for="4353RITPA">Role of ICT in Public Administration</label>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-lg-4">
-        <div class="form-check pb-2">
-          <input class="form-check-input" type="checkbox" name="courses" value="4353WGICT" id="4353WGICT">
-          <label class="form-check-label" for="4353WGICT">Working for the Government as ICT Expert</label>
+          <input class="form-check-input" type="checkbox" name="courses" value="4343SNACS" id="4343SNACS">
+          <label class="form-check-label" for="4343SNACS">Social Network Analysis for Computer Scientists</label>
         </div>
       </div>
     </div>
