--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,15 @@
 
     <div class="row">
       <div class="col">
+        <h2>Rooms</h2>
+        <ul>
+          <li><a href="https://smart.newrow.com/room/?onl-142" target="_blank" rel="noopener">Applied Research Methodology</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
         <h2>Notes</h2>
         <ul>
           <li>Rooms for workgroup Managing Software Evolution not known yet</li>
